--- a/src/style.css
+++ b/src/style.css
@@ -34,6 +34,11 @@ li {
   list-style: none;
 }
 
+footer {
+  margin: 0 auto;
+  text-align: center;
+}
+
 .container {
   width: 650px;
   margin: 100px auto;
