--- a/src/style.css
+++ b/src/style.css
@@ -23,7 +23,8 @@ section {
   line-height: 2;
   color: #fff;
   margin: 0;
-  font-size: 20px;
+  font-size: 25px;
+  margin-bottom: 30px;
 }
 
 ul {
@@ -34,7 +35,8 @@ li {
   list-style: none;
 }
 
-footer {
+small {
+  display: block;
   margin: 0 auto;
   text-align: center;
 }
@@ -68,4 +70,10 @@ button {
   border: 1px #4f4f4f solid;
   border-radius: 2px;
   padding: 2px 5px;
+}
+.weather-forcast-temp-min {
+  opacity: 0.6;
+}
+.weather-forcast-temp-max {
+  opacity: 1;
 }
