--- a/src/style.css
+++ b/src/style.css
@@ -30,6 +30,7 @@ section {
 ul {
   display: inline;
   color: white;
+  text-align: center;
 }
 li {
   list-style: none;
@@ -82,4 +83,7 @@ button {
 
 #mainIcon {
   text-align: center;
+}
+.weather-forecast {
+  margin-top: 30px;
 }
